@@ -23,11 +23,10 @@
 MODULE = Gnome2::UIDefs	PACKAGE = Gnome2::UIDefs
 
 SV *
-constants (class)
+pad (class)
     ALIAS:
-	pad = 1
-	pad_small = 2
-	pad_big = 3
+	pad_small = 1
+	pad_big = 2
 	key_name_quit = 4
 	key_mod_quit = 5
 	key_name_close = 8
@@ -80,9 +79,9 @@ constants (class)
 	char key[] = "_";
     CODE:
 	switch (ix) {
-		case 1: RETVAL = newSViv (GNOME_PAD); break;
-		case 2: RETVAL = newSViv (GNOME_PAD_SMALL); break;
-		case 3: RETVAL = newSViv (GNOME_PAD_BIG); break;
+		case 0: RETVAL = newSViv (GNOME_PAD); break;
+		case 1: RETVAL = newSViv (GNOME_PAD_SMALL); break;
+		case 2: RETVAL = newSViv (GNOME_PAD_BIG); break;
 
 		case 4: key[0] = GNOME_KEY_NAME_QUIT; RETVAL = newSVpv (key, PL_na); break;
 		case 5: RETVAL = newSViv (GNOME_KEY_MOD_QUIT); break;
@@ -155,6 +154,7 @@ constants (class)
 
 		case 52: key[0] = GNOME_KEY_NAME_NEW_GAME; RETVAL = newSVpv (key, PL_na); break;
 		case 53: RETVAL = newSViv (GNOME_KEY_MOD_NEW_GAME); break;
+
 		default: RETVAL = &PL_sv_undef;
 	}
     OUTPUT:
